--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,7 @@ name: Update README
 
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 * * * *' # 每小时运行一次
   push:
     branches:
       - main
@@ -17,9 +17,11 @@ jobs:
         run: |
           echo "![Your GitHub stats](https://github-readme-stats.vercel.app/api?username=${{ secrets.USERNAME }}&show_icons=true&theme=radical)" > README.md
       - name: Commit changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
           git commit -m 'Update README with GitHub stats'
-          git push
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ secrets.USERNAME }}/Transformer-Experiments.git
