--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Update README with GitHub stats
         run: |
           echo "![Your GitHub stats](https://github-readme-stats.vercel.app/api?username=${{ secrets.USERNAME }}&show_icons=true&theme=radical)" > README.md
@@ -24,4 +26,4 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add README.md
           git commit -m 'Update README with GitHub stats'
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ secrets.USERNAME }}/Transformer-Experiments.git
+          git push origin HEAD:main
